fix double scroll

--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,14 @@ body {
   transition: all 0.5s ease-in-out;
   color: white;
 }
-html,
 body {
   width: 100vw;
   overflow-x: hidden;
   scroll-behavior: smooth;
+}
+html {
+  width: 100vw;
+  overflow-x: hidden;
 }
 li {
   cursor: pointer;
